deploy-test-xsuaa.yaml
 apiVersion: v1
 kind: Namespace
 metadata: 
  name: gunter-xsuaa2
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: gunter-gradio-service
  namespace: gunter-xsuaa2
  labels:
    app: gunter-gradio-app
    service: gunter-gradio-service
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: gunter-gradio-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gunter-gradio-app
  namespace: gunter-xsuaa2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gunter-gradio-app
      version: v1
  template:
    metadata:
      labels:
        app: gunter-gradio-app
        version: v1
    spec:
      serviceAccountName: gunter-xsuaa-sa
      containers:
      - image: gunter04/gradioxsuaa:0.1
        imagePullPolicy: Always
        name: gunter-gradio-container
        ports:
        - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gunter-xsuaa-destrule
  namespace: gunter-xsuaa2
spec:
  host: gun-artest
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: JSESSIONID
          path: /
          ttl: 0s
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: gunter-xsuaa-approuter-app
  name: gunter-xsuaa-approuter-app
  namespace: gunter-xsuaa2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gunter-xsuaa-approuter-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gunter-xsuaa-approuter-app
    spec:
      volumes:
      - name: xs-app
        configMap:
          name: xs-app-configmap
      - name: gunter-xsuaa-service-binding
        secret:
          secretName: gunter-xsuaa-service-binding-secret
      containers:
      - image: sapse/approuter:16.0.1
        name: gunter-xsuaa-approuter-container
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources: {}
        volumeMounts:
        - name: xs-app
          mountPath: /app/xs-app.json
          subPath: xs-app.json
          readOnly: true
        - name: gunter-xsuaa-service-binding
          mountPath: /etc/secrets/sapcp/xsuaa/gunter-xsuaa-service-instance
          readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: gunter-xsuaa-approuter-app
  name: gunter-xsuaa-approuter-service
  namespace: gunter-xsuaa2 
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: gunter-xsuaa-approuter-app
status:
  loadBalancer: {}
